--- a/百度/百度1.css
+++ b/百度/百度1.css
@@ -1,144 +1,168 @@
-@charset "utf-8";
+@charset 'utf-8';
+
 /* CSS Document */
-<style>
-*{
-	margin: 0px;
-	padding: 0px;
-}
-body{
-	margin: 0px;
-	padding: 0px;
-}
-.A1{
-	border-bottom: 1px solid #ccc;
-	height: 32px;
-}
-.a1{
-	text-align: right;
-	position: absolute;
-	right: 70px;
-	margin-top: 5px;
-	padding-right: 9px;
-	padding-bottom: 5px;
-	float: left;
-}
-.a2{
-	position: absolute;
-	top: 0px;
-	right: 0px;
-    display:inline;
-    float: left;
-}
-#bt:link{
-	color:#555;
-}
-#bt:visited{
-	color:#555;
-}
-#bt:hover{
-	color:#555;
-}
-#bt:active{
-	color:#555;
-}
-#bt2:link{
-	color:#999;
-}
-#bt2:visited{
-	color:#999;
-}
-#bt2:hover{
-	color:#999;
-}
-#bt2:active{
-	color:#999;
-}
-.a3{
-/*     position: relative;
-    top: 131px; */
-    margin-top: 161px;
-    text-align: center;
-
-}
-.a4{
-	position: absolute;
-	left: 0; 
-    right: 0; 
-    margin-top: 20px;
-    margin-left: auto; 
-    margin-right: auto; 
-    width: 641px; 
-
-}
-.a5{
-	display: inline;
-	float: left;
-}
-.a6{
-	float: left;
-}
-.a7{
-	text-align: center;
-/* 	position: absolute;
-	bottom:140px; */
-	height: 60px;
-	width: 100%;
-
-}
-.a8{
-	text-align: center;
-/* 	position: absolute;
-	bottom:40px; */
-	width: 100%;
-	line-height: 3px;
-	font-size: 12px;
-	font-family: arial;
-	margin-top: 50px;
-	color: #999;
-
-}
-.a9{
-	padding-top: 485px;
-
-}
-.b1{
-	padding-left: 7px;
-	padding-right: 7px;
-    background-color: #398bfb;
-    color: white;
-    border:none;
-    height:32px;
-}
-.b2{
-	width: 540px;
-	height: 34px;
-	border-top:1px solid #d8d8d8;
-	border-bottom:1px solid #d8d8d8;
-	border-left:1px solid #d8d8d8; 
-	border-right: 0px;
-
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.b3{
-	padding-left: 7px;
-	padding-right: 7px;
-    background-color: #398bfb;
-    color: white;
-    border:none;
-    width: 100px;
-    height: 38px;
-    font-size: 16px;
-}
-.nav{
-	margin-left:19px;
-	font-family:"微软雅黑";
-	font-size:14px;
-}
-.nav1{
-	margin-left:19px;
-	font-size:14px;
-	font-weight:bold;
-	font-family:"微软雅黑";
+body {
+  margin: 0;
+  padding: 0;
 }
 
-</style>
+.A1 {
+  height: 32px;
+}
+
+.a1 {
+  position: absolute;
+  right: 70px;
+
+  float: left;
+
+  margin-top: 5px;
+  padding-right: 9px;
+  padding-bottom: 5px;
+
+  text-align: right;
+}
+
+.a2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  display: inline;
+}
+
+#bt:link {
+  color: #555;
+}
+
+#bt:visited {
+  color: #555;
+}
+
+#bt:hover {
+  color: #555;
+}
+
+#bt:active {
+  color: #555;
+}
+
+#bt2:link {
+  color: #999;
+}
+
+#bt2:visited {
+  color: #999;
+}
+
+#bt2:hover {
+  color: #999;
+}
+
+#bt2:active {
+  color: #999;
+}
+
+.a3 {
+  margin-top: 161px;
+
+  text-align: center;
+}
+
+.a4 {
+  position: absolute;
+  right: 0;
+  left: 0;
+
+  width: 641px;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.a5 {
+  display: inline;
+  float: left;
+}
+
+.a6 {
+  float: left;
+}
+
+.a7 {
+  width: 100%;
+
+  height: 60px;
+
+  text-align: center;
+}
+
+.a8 {
+  font-family: arial;
+  font-size: 12px;
+  line-height: 3px;
+
+  width: 100%;
+  margin-top: 50px;
+
+  text-align: center;
+
+  color: #999;
+}
+
+.a9 {
+  padding-top: 485px;
+}
+
+.b1 {
+  height: 32px;
+  padding-right: 7px;
+  padding-left: 7px;
+
+  color: white;
+  border: none;
+  background-color: #398bfb;
+}
+
+.b2 {
+  width: 540px;
+  height: 34px;
+
+  border-top: 1px solid #d8d8d8;
+  border-right: 0;
+  border-bottom: 1px solid #d8d8d8;
+  border-left: 1px solid #d8d8d8;
+}
+
+.b3 {
+  font-size: 16px;
+
+  width: 100px;
+  height: 38px;
+  padding-right: 7px;
+  padding-left: 7px;
+
+  color: white;
+  border: none;
+  background-color: #398bfb;
+}
+
+.nav {
+  font-family: '微软雅黑';
+  font-size: 14px;
+
+  margin-left: 19px;
+}
+
+.nav1 {
+  font-family: '微软雅黑';
+  font-size: 14px;
+  font-weight: bold;
+
+  margin-left: 19px;
+}
